# open_platform_test_task

./: CMakeLists.txt  README.md  build.sh
BookLib/: CMakeLists.txt
BookLib/inc/: Book.h  BookStore.h  Macro.h  SortType.h
BookLib/src/: Book.cpp  BookStore.cpp
TestExe/: CMakeLists.txt  main.cpp
